# foundation

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  init.sh
benchmark-results/: foundation_bench_20260526T145551Z.tsv  foundation_bench_20260529T005605Z.tsv  foundation_bench_20260529T010557Z.tsv  foundation_bench_20260529T011250Z.tsv  foundation_bench_20260529T101824Z.tsv  foundation_bench_20260529T102716Z.tsv  foundation_bench_20260529T120700Z.tsv  foundation_bench_20260529T130319Z.tsv  foundation_bench_20260531T223331Z.tsv  foundation_bench_20260531T223701Z.tsv  foundation_bench_20260602T223837Z.tsv  foundation_bench_20260602T224218Z.tsv  foundation_bench_20260603T025005Z.tsv  foundation_bench_20260603T025238Z_sliced.tsv  foundation_bench_20260604T010027Z.tsv  foundation_bench_20260604T012510Z.tsv  frontend_workbench_profile_20260623T013944Z.tsv  load_research_20260603T190228Z.tsv  load_research_20260603T190329Z.tsv  load_research_20260603T190357Z.tsv  load_research_20260603T190803Z.tsv  load_research_20260604T013125Z.tsv  service_backed_20260526T152527Z.tsv  (+61 more)
runtime-native/rust/: Cargo.toml
runtime-native/rust/src/: lib.rs  native_gpu.rs
runtime-sdk/rust/crates/ovrt-core/: Cargo.toml
runtime-sdk/rust/crates/ovrt-core/src/: diagnostics.rs  generated.rs  layout.rs  lib.rs  log_ring.rs  native_gpu.rs  unit.rs
templates/native/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.prod.conf.json
templates/native/src-tauri/capabilities/: examples.md  main.json
templates/native/src-tauri/src/: lib.rs  main.rs
(+857 files in other folders)
