[package]
name = "{{PROJECT_NAME}}-native"
version = "0.1.0"
description = "{{PROJECT_NAME}} Foundation native shell"
authors = ["Ovasabi Studios"]
edition = "2021"

[lib]
name = "app_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "=2.6.1"

[dependencies]
ovasabi-runtime-native = { path = "../../foundation/runtime-native/rust" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "=2.11.1", features = [] }
